--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,16 @@
     padding: 0;
 }
 
-body {
-    background: black;
+html, body {
+    height: 100%;
+    overflow: hidden;
+    background-color: black;
 }
-canvas {
-    display: block;
+
+#particles-js {
+    position: fixed;
+    height: 100%;
+    width: 100%;
 }
 
 /* Style all font awesome icons */
@@ -56,7 +61,7 @@ canvas {
     color: white;
 }
 .fa-medium:hover {
-    color: black;
+    color: white;
 }
 
 /* Mail */
